BP-3309 Change payment method logo's size in the checkout

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -5,10 +5,10 @@
     align-items: center;
 }
 .bk-img-wrap {
-    min-width: 40px;
-    margin-right:10px;
-    align-items: center;
+    width: 50px;
+    margin-right: 10px;
     display: flex;
+    align-items: center;
 }
 .bk-radio-wrap {
     flex: auto;
