--- a/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
@@ -14,7 +14,7 @@
                 </label>
             </div>
             <div class="bk-img-wrap">
-                <img style="width:40px;" data-bind="attr: { src: logo() }" alt="PayByBank Logo"/>
+                <img data-bind="attr: { src: logo() }" alt="PayByBank Logo"/>
             </div>
         </div>
     </div>
