--- a/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_creditcard.html
@@ -135,8 +135,13 @@
                         <!-- ko text: name --><!-- /ko -->
                     </label>
                 </div>
-                <div class="bk-img-wrap">
-                    <img data-bind="attr: { src: img }"/>
+                <div class="bk-mode-and-img">
+                    <!-- ko if: $parent.isTestMode -->
+                    <div class="bk-test-mode"><div class="bk-test-text" data-bind="i18n: 'Test Mode'"></div></div>
+                    <!-- /ko -->
+                    <div class="bk-img-wrap">
+                        <img data-bind="attr: { src: img, alt: name }" />
+                    </div>
                 </div>
             </div>
         </div>
