BP-3345 - Replace attr: { 'data-validate': JSON.stringify with  data-validate="{

--- a/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_afterpay2.html
@@ -66,8 +66,8 @@
                                    data-bind="
                                    valueUpdate: 'keyup',
                                    value: telephoneNumber,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true })},
                                    event: { blur: validateField }"
+                                   data-validate="{required:true}"
                                    name="payment[buckaroo_magento2_afterpay2][customer_telephone]">
                         </div>
                     </div>
@@ -94,10 +94,8 @@
                                    },
                                    valueUpdate: 'change',
                                    value: dateValidate,
-                                   attr: {
-                                    'data-validate': JSON.stringify({ 'required': true, 'validate-date-au': true, 'validateAge': true }),
-                                    placeholder: $t('DD/MM/YYYY')
-                                   }"
+                                   attr: { placeholder: $t('DD/MM/YYYY') }"
+                                   data-validate="{required:true, 'validate-date-au':true, 'validateAge': true}"
                                    name="payment[buckaroo_magento2_afterpay2][customer_DoB]">
                         </div>
                     </div>
@@ -115,8 +113,8 @@
                                    data-bind="
                                    value: bankAccountNumber,
                                    valueUpdate: 'keyup',
-                                   attr: {'data-validate': JSON.stringify({ 'required': true, 'IBAN':true })},
                                    event: { blur: validateField }"
+                                   data-validate="{required:true, IBAN:true}"
                                    name="payment[buckaroo_magento2_afterpay2][customer_iban]">
                         </div>
                     </div>
@@ -157,14 +155,10 @@
                                    type="text"
                                    data-bind="
                                        valueUpdate: 'keyup',
-                                       value: cocNumber,
-                                       attr: {
-                                            'data-validate': JSON.stringify({
-                                                'required': true,
-                                                'minlength': 8
-                                            }),
-                                        },
-                                        event: { blur: validateField }">
+                                       value: cocNumber
+                                       event: { blur: validateField }"
+                                   data-validate="{required:true, minlength:8}"
+                            >
                         </div>
                     </div>
 
@@ -178,9 +172,9 @@
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: companyName,
-                                       attr: { 'data-validate': JSON.stringify({ 'required': true })
-                                        },
-                                        event: { blur: validateField }">
+                                       event: { blur: validateField }"
+                                   data-validate="{required:true}"
+                            >
                         </div>
                     </div>
                     <!-- /ko -->
@@ -194,9 +188,9 @@
                                    class="field"
                                    type="checkbox"
                                    data-bind="
-                                   checked: termsValidate,
-                                   attr: { 'data-validate': JSON.stringify({ 'required': true})},
-                                   event: { change: validateField }"
+                                       checked: termsValidate,
+                                       event: { change: validateField }"
+                                   data-validate="{required:true}"
                                    name="payment[buckaroo_magento2_afterpay2][termsCondition]">
                             <span>
                                 <a target="_blank"
