--- a/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_mrcash.html
@@ -57,10 +57,10 @@
                                        class="input-text field"
                                        name="payment[buckaroo_magento2_mrcash][cardholdername]"
                                        data-bind="
-                            valueUpdate: 'blur',
-                            value: cardHolderName,
-                            attr: { 'data-validate': JSON.stringify({ 'required': true, 'validateCardHolderName': true }) },
-                            event: { blur: validateField }">
+                                        valueUpdate: 'blur',
+                                        value: cardHolderName,
+                                        event: { blur: validateField }"
+                                       data-validate="{'required': true, 'validateCardHolderName': true}">
                             </div>
                         </div>
 
@@ -76,11 +76,11 @@
                                         valueUpdate: 'input',
                                         value: formatedCardNumber,
                                         attr: {
-                                            'data-validate': JSON.stringify({ 'required': true, 'validateCardNumber': true }),
                                             'maxlength': 23,
                                             'placeholder': '0000 0000 0000 0000'
                                         },
-                                        event: { blur: validateField }">
+                                        event: { blur: validateField }"
+                                        data-validate="{'required': true, 'validateCardHolderName': true}">
                                 </div>
                             </div>
 
@@ -94,16 +94,14 @@
                                         class="input-text field"
                                         name="payment[buckaroo_magento2_mrcash][expireDate]"
                                         data-bind="
-                                valueUpdate: 'input',
-                                value: formatedExpirationDate,
-                                attr: { 
-                                    'data-validate': JSON.stringify(
-                                        { 'required': true,  'bkValidateMonth': true, 'bkValidateYear': true }
-                                    ),
-                                    'maxlength': 5,
-                                    'placeholder': 'MM/YY'
-                                },
-                                event: { blur: validateField }">
+                                            valueUpdate: 'input',
+                                            value: formatedExpirationDate,
+                                            attr: {
+                                                'maxlength': 5,
+                                                'placeholder': 'MM/YY'
+                                            },
+                                            event: { blur: validateField }"
+                                        data-validate="{'required':true,  'bkValidateMonth':true, 'bkValidateYear':true}">
                                 </div>
                             </div>
                         </div>
