--- a/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_sepadirectdebit.html
@@ -53,11 +53,9 @@
                                    data-bind="
                                     value: bankaccountholder,
                                     valueUpdate: 'keyup',
-                                    attr: {
-                                        'data-validate': JSON.stringify({ 'required': true, 'min-words': 2 })
-                                    },
                                     event: { blur: validateField }
                                    "
+                                   data-validate="{required: true, 'min-words': 2 }"
                                    name="payment[buckaroo_magento2_sepadirectdebit][customer_account_name]">
                         </div>
                     </div>
@@ -72,11 +70,9 @@
                                    data-bind="
                                     value: bankaccountnumber,
                                     valueUpdate: 'keyup',
-                                    attr: {
-                                        'data-validate': JSON.stringify({ 'required': true, 'IBAN':true })
-                                    },
                                     event: { blur: validateField }
                                    "
+                                   data-validate="{required:true, IBAN: true}"
                                    name="payment[buckaroo_magento2_sepadirectdebit][customer_iban]">
                         </div>
                     </div>
@@ -92,11 +88,9 @@
                                    data-bind="
                                     value: bicnumber,
                                     valueUpdate: 'keyup',
-                                    attr: {
-                                        'data-validate': JSON.stringify({ 'required': true, 'BIC':true })
-                                    },
                                     event: { blur: validateField }
                                    "
+                                   data-validate="{required:true, 'BIC':true}"
                                    name="payment[buckaroo_magento2_sepadirectdebit][customer_bic]">
                         </div>
                     </div>
