--- a/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_voucher.html
@@ -51,9 +51,8 @@
                                 placeholder="1A2B-3C4D-6E7F-8G9H-1I2J"
                                 data-bind="
                                        valueUpdate: 'keyup',
-                                       value: code,
-                                       attr: { 'data-validate': JSON.stringify({ 'required': true })
-                                        }">
+                                       value: code"
+                                data-validate="{required:true}">
                         </div>
                     </div>
 
