--- a/view/frontend/web/template/checkout/idinstep.html
+++ b/view/frontend/web/template/checkout/idinstep.html
@@ -11,9 +11,13 @@
         </div>
         <div class="buckaroo_idin_right">
             <form data-bind="submit: verificateIDIN">
-                <select id="buckaroo_magento2_idin_issuer" class="field" data-bind="value: idinIssuer,
-                                    event: { change: setSelectedBankDropDown },
-                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) }" name="bank">
+                <select id="buckaroo_magento2_idin_issuer"
+                        class="field"
+                        data-bind="
+                            value: idinIssuer,
+                            event: { change: setSelectedBankDropDown }"
+                        data-validate="{'required-entry':true}"
+                        name="bank">
                     <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
                     <!-- ko foreach: banktypes -->
                     <option data-bind="i18n: name, 'value': code"></option>
