--- a/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_paybybank.html
@@ -82,8 +82,8 @@
                         <div class="control">
                             <select id="buckaroo_magento2_ideal_issuer" class="field"
                                     data-bind="value: selectedBank,
-                                    attr: { 'data-validate': JSON.stringify({ 'required-entry': true }) },
                                     event: { change: validateField }"
+                                    data-validate="{'required-entry':true}"
                                     name="buckaroo_magento2_ideal_issuer">
                                 <option data-bind="i18n: 'Select a bank', 'value': ''"></option>
                                 <!-- ko foreach: bankTypes -->
