--- a/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_payperemail.html
@@ -46,14 +46,16 @@
                     <div class="field required">
                         <label class="label" for="buckaroo_magento2_payperemail_genderSelect"> <span data-bind="i18n: 'Salutation:'"> </span> </label>
                         <div class="control">
-                            <select id="buckaroo_magento2_payperemail_genderSelect" name="payment[buckaroo_magento2_payperemail[customer_gender]" class="field"
-                                data-bind="options: genderList,
+                            <select id="buckaroo_magento2_payperemail_genderSelect"
+                                    name="payment[buckaroo_magento2_payperemail[customer_gender]"
+                                    class="field select"
+                                    data-bind="options: genderList,
                                     optionsText: $t('genderTitle'),
                                     optionsValue: 'genderType',
                                     optionsCaption: $t('-- Please Select Your Gender--'),
                                     value: selectedGender,
-                                    attr: { 'data-validate': JSON.stringify({ 'required': true }) },
-                                    event: { blur: validateField }" class="select">
+                                    event: { blur: validateField }"
+                                    data-validate="{required:true}">
                             </select>
                         </div>
                     </div>
@@ -68,10 +70,9 @@
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: firstName,
-                                       attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                        event: { blur: validateField }"
-                                   name="payment[buckaroo_magento2_payperemail][customer_billingFirstName]"
-                                   >
+                                   data-validate="{required:true}"
+                                   name="payment[buckaroo_magento2_payperemail][customer_billingFirstName]">
                         </div>
                     </div>
 
@@ -98,8 +99,8 @@
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: lastName,
-                                       attr: { 'data-validate': JSON.stringify({ 'required': true }) },
                                        event: { blur: validateField }"
+                                   data-validate="{required:true}"
                                    name="payment[buckaroo_magento2_payperemail][customer_billingLastName]"
                             >
                         </div>
@@ -114,8 +115,8 @@
                                    data-bind="
                                        valueUpdate: 'keyup',
                                        value: email,
-                                       attr: { 'data-validate': JSON.stringify({ 'required': true, 'validate-email': true })},
                                        event: { blur: validateField }"
+                                   data-validate="{required:true, 'validate-email': true}"
                                    name="payment[buckaroo_magento2_payperemail][customer_email]">
                         </div>
                     </div>
