BP-3356 Limit the logo size to 40px for all payment methods/giftcard

--- a/view/frontend/web/css/styles.css
+++ b/view/frontend/web/css/styles.css
@@ -5,7 +5,7 @@
     align-items: center;
 }
 .bk-img-wrap {
-    min-width: 40px;
+    width: 40px;
     margin-right:10px;
     align-items: center;
     display: flex;
