--- a/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
+++ b/view/frontend/web/template/payment/buckaroo_magento2_giftcards.html
@@ -162,7 +162,7 @@
         </div>
 
             <div class="checkout-agreements-block">
-                <!-- ko foreach: $parent.getRegion('before-place-order') -->
+                <!-- ko foreach: $parents[1].getRegion('before-place-order') -->
                         <!-- ko template: getTemplate() --><!-- /ko -->
                 <!--/ko-->
             </div>
